# OnlineSFM

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yaml  get_depends.sh  install_cmake.sh  list_of_refactors.txt  setup.sh  sfm_data.json
common/proto/src/: index.proto  server.proto  storage.proto  worker.proto
db/: mongo_setup.js  mongo_setup.sh  reconstruction.sql
docker-resource/: config.json
docker-resource/elastic/: setup.py
docker-resource/mongo/init/: import_defaults.sh  mongo_setup.js  openmvg_default.json
docker-resource/mysql/init/: reconstruction.sql
scripts/: delete_reconstruction.py  do_reconstruction.py  emulate_reconstruction_session.py  make_reconstruction.py  reconstruct_dataset.py  reconstruct_directory_get_obj.py  upload_directory.py  upload_image.py
scripts/install/: install_all.sh  install_amqp_cpp.sh  install_apt_depends.sh  install_boost.sh  install_ctpl.sh  install_elasticsearch.sh  install_glog.sh  install_grpc.sh  install_hiredis.sh  install_image_server.sh  install_libmongodb.sh  install_libmongodbc.sh  install_mvg.sh  install_mvs.sh  install_nlohmann-json.sh  install_protobuf.sh  install_react.sh  install_redis++.sh
scripts/install/ceres_build/: CMakeCache.txt  commit-msg
scripts/install/eigen_build/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  buildtests.sh  cdashtesting.cmake  cmake_install.cmake
scripts/openMVS_build/: CMakeCache.txt  ConfigLocal.h  Makefile  OpenMVSConfig.cmake  OpenMVSConfigVersion.cmake  OpenMVSTargets.cmake  cmake_install.cmake  cmake_uninstall.cmake  install_manifest.txt
scripts/openMVS_build/apps/: Makefile  cmake_install.cmake
scripts/openMVS_build/docs/: Makefile  cmake_install.cmake
scripts/openMVS_build/libs/: Makefile  cmake_install.cmake
scripts/perf/: perf_test.py  reconstruct_directory_test.py  test_large_reconstruction.py
scripts/perf/default-2020-05-06 19:25:05.086696/: report.json
scripts/perf/default-2020-05-11 22:56:06.207568/: report.json  sparse.ply
scripts/perf/default-2020-05-11 23:07:55.002101/: report.json
scripts/perf/default-2020-05-11 23:21:17.527468/: report.json
scripts/perf/default-2020-05-11 23:21:25.125593/: report.json  sparse.ply
scripts/perf/default-2020-05-11 23:28:10.121109/: report.json
scripts/perf/default-2020-05-11 23:59:41.038937/: report.json
scripts/perf/default-2020-05-11 23:59:52.881723/: report.json
scripts/perf/default-2020-05-12 00:00:07.338874/: report.json  sparse.ply
scripts/perf/default-2020-05-12 00:00:35.591778/: report.json
scripts/perf/default-2020-05-12 00:00:49.899320/: report.json  sparse.ply
scripts/perf/default-2020-05-12 00:01:32.758867/: report.json
scripts/perf/default-2020-05-12 00:02:57.761030/: report.json
scripts/perf/default-2020-05-12 00:10:55.925510/: report.json
scripts/perf/default-2020-05-12 00:13:09.907038/: report.json
scripts/perf/default-2020-05-12 00:17:14.964005/: report.json
scripts/perf/default-2020-05-12 00:20:31.287191/: report.json
src/common/: descriptor_storage.h  index_helpers.cpp  index_helpers.h  sql_descriptor_storage.h  sql_storage.cpp  sql_storage.h  types.cpp  types.h  util.cpp  util.h
src/core/: cached_descriptor_storage.h  camera_intrinsics_storage.h  config.cpp  config.h  configuration_adapter.cpp  configuration_adapter.h  connection_pool.h  descriptor_score_storage.h  descriptor_storage.h  exceptions.h  expotential_backoff.h  filesystem_storer.h  grpc_service_provider.cpp  grpc_service_provider.h  image_data_storage.h  image_filesystem_storer.cpp  image_filesystem_storer.h  image_storage.h  image_storage_openmvg_adapter.cpp  image_storage_openmvg_adapter.h  index_helpers.cpp  index_helpers.h  job_index_service.cpp  job_index_service.h  job_remote_reconstruction_agent.cpp  job_remote_reconstruction_agent.h  jobs.h  mongodb_configuration_adapter.cpp  mongodb_configuration_adapter.h  mvs_strategy.h  obj_data_storage.h  obj_storage.h  openmvg_ext.h  openmvg_reconstruction_agent.cpp  openmvg_reconstruction_agent.h  openmvs.cpp  reconstruction.h  reconstruction_agent.h  reconstruction_storage.h  recontruction.cpp  (+39 more)
src/future/: session.cpp  session.h
src/gateway/: Dockerfile  gateway.cpp  server.cpp
src/job/: ampq_job_queue.h  amqp_job_queue.cpp  capacity_bounded_job_queue_decorator.cpp  capacity_bounded_job_queue_decorator.h  job.cpp  job.h  job_cost.cpp  job_cost.h  predicate_job_queue_decorator.cpp  predicate_job_queue_decorator.h  static_job_cost_provider.cpp  static_job_cost_provider.h
src/server/: camera_intrinsics_storage.h  config.h  configuration_adapter.cpp  configuration_adapter.h  filesystem_storer.h  image_filesystem_storer.cpp  image_filesystem_storer.h  image_storage.h  matcher.cpp  matcher.h  mongodb_configuration_adapter.cpp  mongodb_configuration_adapter.h  mvs_strategy.h  obj_storage.h  openmvg.cpp  openmvg_reconstruction_agent.cpp  openmvg_reconstruction_agent.h  openmvg_storage_adapter.h  openmvg_strategy.cpp  openmvg_strategy.h  openmvs.h  openmvs_strategy.cpp  reconstruction.h  reconstruction_agent.h  reconstruction_storage.h  reconstruction_strategy.cpp  reconstruction_strategy.h  recontruction.cpp  redis_session_image_queue_adapter.cpp  redis_session_image_queue_adapter.h  redis_sfm_backlog.cpp  redis_sfm_backlog.h  server.cpp  session.cpp  session.h  session_image_queue_adapter.h  sfm_backlog_counter.h  sfm_strategy.h  sql_camera_instrinsics_storage.cpp  sql_camera_intrinsics_storage.cpp  (+16 more)
src/storage/: server.cpp  server.h
src/worker/: Dockerfile  exceptions.h  openmvg.h  openmvg_impl.cpp  openmvg_reconstruction_agent.cpp  openmvg_reconstruction_agent.h  openmvg_storage_adapter.h  redis_worker_reserver.cpp  redis_worker_reserver.h  worker.cpp  worker.h  worker_pool_manager.h  worker_reserver.h
src/worker_manager/: exceptions.h  redis_worker_reserver.cpp  redis_worker_reserver.h  worker_pool_manager.cpp  worker_reserver.h
tools/: upload_intrinsics_db_to_mysql.cpp
tools/index_ui/: package-lock.json  package.json
(+420 files in other folders)
